// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <HabitCard /> correctly 1`] = `
<div>
  <div
    class="card mt-4"
  >
    <div
      class="card-header text-monospace d-flex justify-content-between"
    >
      <span
        class="d-flex"
      >
        <a
          href="/habits/0015799f-e142-4442-8dbf-b8f1244cee28"
        >
          <svg
            aria-labelledby="svg-inline--fa-title-pQ4Krmhqhcn4"
            data-prefix="fas"
            data-icon="edit"
            class="svg-inline--fa fa-edit fa-w-18 fa-lg mr-3"
            role="img"
            xmlns="http://www.w3.org/2000/svg"
            viewBox="0 0 576 512"
            style="cursor: pointer;"
            color="#76B439"
            data-toggle="tooltip"
          >
            <title
              id="svg-inline--fa-title-pQ4Krmhqhcn4"
            >
              Edit Habit
            </title>
            <path
              fill="currentColor"
              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
            />
          </svg>
        </a>
        <svg
          aria-labelledby="svg-inline--fa-title-dUVDq4mKwl5v"
          data-prefix="fas"
          data-icon="trash-alt"
          class="svg-inline--fa fa-trash-alt fa-w-14 fa-lg"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 448 512"
          style="cursor: pointer;"
          color="#8F1012"
          data-toggle="tooltip"
        >
          <title
            id="svg-inline--fa-title-dUVDq4mKwl5v"
          >
            Delete Habit
          </title>
          <path
            fill="currentColor"
            d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
          />
        </svg>
      </span>
      <span>
        <span
          class="font-weight-bold"
        >
          Expired
        </span>
      </span>
    </div>
    <div
      class="card-body d-flex justify-content-between"
    >
      <h5
        class="card-title d-flex align-items-center mb-0 text-monospace font-weight-bold"
      >
        New habit
      </h5>
      <button
        type="button"
        class="btn btn-secondary"
        data-testid="activate-habit-button"
      >
        Stop
      </button>
    </div>
  </div>
</div>
`;

exports[`should render <HabitCard /> correctly 2`] = `
<div>
  <div
    class="card mt-4"
  >
    <div
      class="card-header text-monospace d-flex justify-content-between"
    >
      <span
        class="d-flex"
      >
        <a
          href="/habits/0015799f-e142-4442-8dbf-b8f1244cee28"
        >
          <svg
            aria-labelledby="svg-inline--fa-title-ILa3QbXCl9P5"
            data-prefix="fas"
            data-icon="edit"
            class="svg-inline--fa fa-edit fa-w-18 fa-lg mr-3"
            role="img"
            xmlns="http://www.w3.org/2000/svg"
            viewBox="0 0 576 512"
            style="cursor: pointer;"
            color="#76B439"
            data-toggle="tooltip"
          >
            <title
              id="svg-inline--fa-title-ILa3QbXCl9P5"
            >
              Edit Habit
            </title>
            <path
              fill="currentColor"
              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
            />
          </svg>
        </a>
        <svg
          aria-labelledby="svg-inline--fa-title-rX0yR72byImz"
          data-prefix="fas"
          data-icon="trash-alt"
          class="svg-inline--fa fa-trash-alt fa-w-14 fa-lg"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 448 512"
          style="cursor: pointer;"
          color="#8F1012"
          data-toggle="tooltip"
        >
          <title
            id="svg-inline--fa-title-rX0yR72byImz"
          >
            Delete Habit
          </title>
          <path
            fill="currentColor"
            d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
          />
        </svg>
      </span>
      <span>
        <span
          class="text-muted font-italic"
        >
          Expires in 
        </span>
        <span
          class="font-weight-bold"
        >
          47 hours
        </span>
      </span>
    </div>
    <div
      class="card-body d-flex justify-content-between"
    >
      <h5
        class="card-title d-flex align-items-center mb-0 text-monospace font-weight-bold"
      >
        New habit
      </h5>
      <button
        type="button"
        class="btn btn-secondary"
        data-testid="activate-habit-button"
      >
        Stop
      </button>
    </div>
  </div>
</div>
`;
